app/assets/stylesheets/projects.css.sass
.rating
  :background image-url('star-sprite.png') 0 0 no-repeat
  :position relative
  :display inline-block
  :width 105px
  :height 20px
  :text-indent -9999em

  &.rating-1
    :background-position 0 -49px
  &.rating-2
    :background-position 0 -122px
  &.rating-3
    :background-position 0 -194px
  &.rating-4
    :background-position 0 -266px
  &.rating-5
    :background-position 0 -338px

blockquote
  :font-size 12px

.project-map,
#project_map
  :width 100%

#project_map
  height: 350px
  margin-bottom: 20px
  float: left

#project_map, .project_map
  img
    max-width: none

  .project_info
    height: auto

    h4
      margin: 0 15px 10px 0

    .rating
      margin-right: 15px
      float: right

    .desc
      clear: both
      margin-bottom: 10px

    .actions, .rating
      display: inline-block
      vertical-align: middle

    .actions
      margin: 0 15px 0 0

#project_controls
  display: block
  clear: both
  position: relative
  top: -20px
  padding: 5px 10px
  border: 1px solid #eee
  background-color: #fafafa
  margin: 0 0 10px

  #new_project_marker
    display: block
    width: 20px
    height: 35px
    float: left
    margin: 0 10px 15px 0
    cursor: move
    background-image: url("http://maps.google.com/mapfiles/marker_green.png")
    background-repeat: no-repeat

    p
      text-indent: -9999em

  h6
    margin-top: 0

.project_photos
  &.before
    img
      :max-width 100%
  &.gallery
    :overflow hidden
    img
      :max-width 45%
      :float left
      :margin 5px

/* Modal
.modal-body
  padding-bottom: 2em

  .name
    .input
      float: left
      margin-right: 20px

      input
        width: 280px

    .input.select select
      width: 150px

  .desc
    clear: both
    textarea
      width: 450px
      height: 6em

/* SHOW */
.comments
  :background #fafafa
  :border-left 2px solid #ddd
  :padding 10px
  .comments-inner
    :width 95%
    :margin 0 auto

  textarea
    :width 95%
    :height 70px

#streetview
  height: 300px


#map_preview

